welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not found: type red
		    setCouleurBrosse(c:red)
                                       ^MethodsPicture:11: error: not found: type blue
		    setCouleurBrosse(c:blue)
                                       ^MethodsPicture:13: error: not found: type green
		    setCouleurBrosse(c:green)
                                       ^